<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityCard"
    >

    <ImageView
        android:src="@drawable/lily_nugget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:contentDescription="This is a Thank You card. PC to LilyPichu, a league streamer."
        />

    <TextView
        android:id="@+id/buffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="112dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/buffer_text"
         />
    <!--There are two ways to display your text values, one through hardcoding
        and the other through calling te string resource variable name-->

    <Button
        android:id="@+id/Thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buffer"
        android:background="@color/colorAccent"
        android:text="@string/thank_text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        />

    <!-- If you are going to position a layout/view with align,
         do remember to not match_parent to the orientation that you desire
         ie if you want to move it height wise (y axis), leave layout_height to wrap
         -->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

        <!-- And make sure you your children element layouts do not conflict
            with the parent!
            -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/end_credits"
            android:fontFamily="casual"
            android:textColor="#c02f1d"
            android:textSize="42sp"
            android:paddingRight="5dp"
            android:paddingBottom="20dp"
            />

        <TextView
            android:id="@+id/stuff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="32sp"
            android:paddingTop="82dp"
            android:fontFamily="cursive"
            android:layout_alignParentStart="true"
            tools:ignore="HardcodedText"
            android:text="PC: LilyPichu"
            />
    </RelativeLayout>



</RelativeLayout>
